--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,4 @@
 platform = atmelsam
 board = adafruit_grandcentral_m4
 framework = arduino
-upload_port = /dev/cu.usbmodem14301
+; upload_port = /dev/cu.usbmodem14401
