--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,5 @@
 platform = atmelsam
 board = adafruit_grandcentral_m4
 framework = arduino
-; upload_port = /dev/cu.usbmodem14401
+monitor_speed = 115200
+; upload_port = /dev/tty.usbmodem14301
